# DCI-Generator

./: .dockerignore  .env.example  .gitignore  2258e45a-531e-4412-ab47-3c6bd96eed8a_benefits.debug.json  2fbb17cc-39fb-412e-9fc6-4a97adf0a99b_segments.debug.json  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  README_SEEDER.md  build_worker.sh  check_schema.py  dev.ipynb  directus_seeder.py  directus_tools.py  docker-compose.yml  example_gql_response.json  generali.md  generali_analysis_results_short.json  generali_details.debug.json  generali_seeded_data.json  main.py  ocr_output.json  pyproject.toml  segment_structured_output.json  test_api_endpoints.py  test_celery_tasks.py  test_integration.py  test_stage_1_1.py  test_stage_1_2.py  test_stage_2.py  test_stage_3.py  test_stage_4.py  validate_redis.py  worker_instructions.md
.serena/: project.yml
.serena/memories/: cli_parameters_analysis.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_guidelines.md
broker/: Dockerfile  main.py
debug/: 2258e45a-531e-4412-ab47-3c6bd96eed8a_details.debug.json  2258e45a-531e-4412-ab47-3c6bd96eed8a_segments.debug.json
follow-up/: SECAUDIT.md
graphql/: GetCompleteTaxonomyHierarchy.graphql
travel-insurance/markdown/: allianz.md  axa.md  css.md  erv.md  generali.md  mobiliar.md  swica.md  zurich.md
worker/: .dockerignore  Dockerfile  celery_app.py  dci_extraction_worker.py  directus_tools.py  prompt_manager.py  simple_worker.py  simplified_seeder.py  tasks.py  worker.py  worker_main.py
worker/analyzers/: __init__.py  document.py
(+21 files in other folders)
